# aiooss2

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: ci.yml  release.yml  tests.yml
aiooss/: __init__.py  api.py  exceptions.py  http.py  iterators.py
aiooss2/: __init__.py  adapter.py  api.py  exceptions.py  http.py  iterators.py  models.py  multipart.py  resumable.py  utils.py
docs/: index.md
examples/: simple.py
reference/aiooss2/: index.html
reference/aiooss2/adapter/: index.html
reference/aiooss2/api/: index.html
reference/aiooss2/exceptions/: index.html
reference/aiooss2/http/: index.html
reference/aiooss2/iterators/: index.html
reference/aiooss2/models/: index.html
reference/aiooss2/multipart/: index.html
reference/aiooss2/resumable/: index.html
reference/aiooss2/utils/: index.html
search/: search_index.json
src/aiooss2/: __init__.py  adapter.py  api.py  exceptions.py  http.py  iterators.py  models.py  multipart.py  resumable.py  utils.py
tests/: __init__.py  conftest.py  test_aiooss2.py
tests/func/: test_bucket.py  test_object.py  test_resumable.py  test_simple.py
tests/unit/: test_adapter.py
