[metadata]

description = Async client for aliyun OSS
name = aiooss2
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
url = https://github.com/karajan1001/aiooss2
platforms=any
authors = Yanxiang Gao
maintainer_email = mishanyo1001@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 3 - Alpha
keywords = "oss, aio" 

[options]
setup_requires =
    setuptools>=48
    setuptools_scm[toml]>=7

python_requires = >=3.7
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    aiohttp==3.8.1
    oss2==2.16.0

[options.extras_require]
tests =
    pytest==7.1.2
    pytest-mock==3.8.2
    pylint==2.14.5
    pylint-pytest==1.1.2
    mypy==0.971

dev =
    %(tests)s
    nox==2022.8.7

[options.packages.find]
exclude =
    tests
    tests.*

[bdist_wheel]
universal=1

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length=79
max-complexity = 15
select=B,C,E,F,W,T4,B902,T,P
show_source=true
count=true

[isort]
profile=black
known_first_party=ossfs,tests
line_length=79

[tool:pytest]
log_level = debug
addopts = -ra
markers =
    needs_internet: Might need network access for the tests

[mypy]
# Error output
show_column_numbers = True
show_error_codes = True
show_error_context = True
show_traceback = True
pretty = True

# See https://mypy.readthedocs.io/en/latest/running_mypy.html#missing-imports.
ignore_missing_imports = True
check_untyped_defs = False

# Warnings
warn_no_return=True
warn_redundant_casts=True
warn_unreachable = True
files = aiooss2
