[metadata]
description = Async client for aliyun OSS(Object Storage Service) using oss2 and aiohttp/asyncio
name = aiooss2
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/karajan1001/aiooss2
platforms=any
authors = Yanxiang Gao
maintainer_email = mishanyo1001@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 3 - Alpha

keywords = "oss, aio"
[options]
python_requires = >=3.8
zip_safe = False
packages = find:
package_dir=
    =src
include_package_data = True
install_requires =
    aiohttp==3.8.5
    oss2==2.18.2

[options.extras_require]
tests =
    pytest==7.2.0
    pytest-sugar==0.9.5
    pytest-cov==3.0.0
    pytest-mock==3.8.2
    pylint==2.15.0
    pylint-pytest==1.1.2
    mypy==0.971
dev =
    %(tests)s
    nox==2023.4.22

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[options.package_data]
aiooss2 = py.typed

[flake8]
ignore=
    # Whitespace before ':'
    E203
    # Too many leading '#' for block comment
    E266
    # Line break occurred before a binary operator
    W503
    # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
    P1
max_line_length = 88
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
